syntax = "proto3";
package authpb;

import "ctxswh/gatewaypb/gateway.proto";

service AuthService {
  rpc Serve(stream AuthRequest) returns (stream AuthResponse) {}
}

message AuthRequest {
  oneof MessageRequest {
    gatewaypb.LoginRequest loginRequest = 1;
  }
}

message AuthResponse {
  oneof MessageResponse {
    gatewaypb.LoginResponse loginResponse = 1;
  }
}

message Account {
  string username = 1;
  string passwdHash = 2;
  string email = 3;
  bool   gm = 4;
}
